--- a/app/src/main/res/layout/zhy_write_mapselect_normal.xml
+++ b/app/src/main/res/layout/zhy_write_mapselect_normal.xml
@@ -2,11 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingLeft="@dimen/dimen_32dp"
-    android:paddingRight="@dimen/dimen_32dp"
     android:background="@color/white"
     android:orientation="horizontal"
     android:paddingBottom="@dimen/dimen_33dp"
+    android:paddingLeft="@dimen/dimen_32dp"
+    android:paddingRight="@dimen/dimen_32dp"
     android:paddingTop="@dimen/dimen_33dp">
 
     <TextView
@@ -19,22 +19,30 @@
         android:textSize="@dimen/dimen_24dp" />
 
     <TextView
-        android:ems="7"
-        android:layout_marginLeft="@dimen/dimen_4dp"
         android:id="@+id/tv_titlename"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/dimen_4dp"
+        android:ems="7"
         android:gravity="center_vertical"
         android:textColor="@color/dimgray"
         android:textSize="@dimen/dimen_24dp" />
 
-    <EditText
+    <AutoCompleteTextView
         android:layout_marginLeft="@dimen/dimen_8dp"
         android:textColor="@color/zhy_text_color_9"
-        android:gravity="top"
-        android:id="@+id/et_input"
-        android:textSize="@dimen/dimen_24dp"
+        android:id="@+id/auto_textview"
+        android:layout_width="@dimen/dimen_0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:background="@null"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:gravity="center_vertical"
+        android:textSize="@dimen/dimen_24dp" />
+
+    <ImageView
+        android:id="@+id/iv_mapcheck"
+        android:layout_width="@dimen/dimen_36dp"
+        android:layout_height="@dimen/dimen_36dp"
+        android:layout_gravity="center"
+        android:src="@drawable/button_map_icon" />
 </LinearLayout>
