--- a/app/src/main/res/drawable/zhy_button_bg_check_2.xml
+++ b/app/src/main/res/drawable/zhy_button_bg_check_2.xml
@@ -2,4 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
     <solid
         android:color="@color/zhy_rb_check_1" />
+    <corners android:radius="@dimen/dimen_7dp"></corners>
 </shape>
