--- a/app/src/main/res/layout/view_order_qt.xml
+++ b/app/src/main/res/layout/view_order_qt.xml
@@ -55,7 +55,6 @@
             android:visibility="gone" />
 
         <android.support.v4.widget.SwipeRefreshLayout
-            android:layout_marginTop="@dimen/dimen_16dp"
             android:id="@+id/sryt_swipe_listview"
             android:layout_marginRight="@dimen/dimen_16dp"
             android:layout_marginLeft="@dimen/dimen_16dp"
@@ -69,8 +68,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:choiceMode="singleChoice"
-                android:divider="@color/zhy_text_color_3"
-                android:dividerHeight="@dimen/dimen_16dp"
+                android:divider="@null"
+                android:dividerHeight="@dimen/dimen_0dp"
                 android:fadingEdge="none"
                 android:scrollbarStyle="outsideOverlay" />
         </android.support.v4.widget.SwipeRefreshLayout>
