--- a/app/src/main/res/layout/zhy_write_spinnerview_edit.xml
+++ b/app/src/main/res/layout/zhy_write_spinnerview_edit.xml
@@ -3,16 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
-    android:orientation="horizontal"
-    android:paddingBottom="@dimen/dimen_33dp"
-    android:paddingLeft="@dimen/dimen_32dp"
-    android:paddingRight="@dimen/dimen_32dp"
-    android:paddingTop="@dimen/dimen_33dp">
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/tv_important"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/dimen_32dp"
         android:gravity="center"
         android:text="*"
         android:textColor="@color/zhy_text_color_10"
@@ -25,20 +22,32 @@
         android:layout_marginLeft="@dimen/dimen_4dp"
         android:ems="7"
         android:gravity="center_vertical"
+        android:paddingBottom="@dimen/dimen_33dp"
+        android:paddingTop="@dimen/dimen_33dp"
         android:textColor="@color/dimgray"
         android:textSize="@dimen/dimen_24dp" />
 
     <Spinner
         android:id="@+id/spinner"
-        android:layout_width="@dimen/dimen_0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_marginRight="@dimen/dimen_16dp"
         android:background="@null"
         android:textSize="@dimen/dimen_24dp" />
 
-    <ImageView
-        android:layout_width="@dimen/dimen_20dp"
-        android:layout_height="@dimen/dimen_20dp"
-        android:layout_gravity="center"
-        android:src="@drawable/zhy_spinner_icon" />
+    <TextView
+        android:layout_width="@dimen/dimen_1dp"
+        android:layout_height="match_parent"
+        android:background="@color/zhy_line_5" />
+
+    <EditText
+        android:textColor="@color/zhy_text_color_9"
+        android:hint="选择其他时输入"
+        android:layout_marginLeft="@dimen/dimen_16dp"
+        android:id="@+id/et_input"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginRight="@dimen/dimen_32dp"
+        android:background="@null"
+        android:textSize="@dimen/dimen_24dp" />
 </LinearLayout>
